# lazy-variant

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
docs/: api.md  installation.md  notes.md  quick-start.md
include/: DbVariant.h  Result.h  ResultRow.h
src/: DbVariant.cpp  Result.cpp  ResultRow.cpp
tests/: CMakeLists.txt  result.cpp
